bookface_dark.css
/*
    Name	 : Bookface Dark
    Version    : 1.3
    Licence    : AGPL
    Created on : 11 Feb 2025
    Author     : Pygoscelis Papua @randompenguin@friendica.world feb @feb@loma.ml Phil @phil@loma.ml
*/

:root {
    --global-font-family: 'Open Sans', Arial, sans-serif, Noto Color Emoji;
    --nav-bg: $nav_bg;
    --link-color: $link_color;
    --nav-icon-color: $nav_icon_color;
    --background-color: $background_color;
    --contentbg-transp: $contentbg_transp;
    --font-color: $font_color;
    --font-color-darker: $font_color_darker;
    --background-image: $background_image;
    --menu-background-hover-color: $menu_background_hover_color;
    --border-color: #333333;
    --count-color:  #ffffff;
    --count-bg: var(--link-color);
    
    /* LOCALIZE pseudo-element text below */
    --sign-in-text: 'Sign-In';
    --compose-text: 'Compose';
    --new-note-text: 'New Note';
    --save-search-text: 'Save Search';
    --follow-tag-text: 'Follow Tag';
    --comment-button-text: 'Comment';
    --share-button-text: 'Share';
    --quote-button-text: 'Quote';
    --like-button-text: 'Like';
    --dislike-button-text: 'Dislike';
    --more-button-text: 'More';
    --attendyes-button-text: 'Going';
    --attendno-button-text: 'Can\'t Go';
    --attendmaybe-button-text: 'Maybe';
    --add-photo-button-text: 'Add Photos';
    --follow-button-text: 'Follow';
    --save-button-text: 'Save';
}

body {
       background-color: var(--background-color) !important;
       font-size: 15px !important;
       padding-top: 130px !important;
       font-family: var(--global-font-family);
}
#topbar-first .nav > li > a, 
#topbar-first .nav > li > button, 
nav.navbar .nav > li > a, 
nav.navbar .nav > li > button{
       color: var(--nav-icon-color) !important;
       }
#topbar-first, nav.navbar {
       background-color: var(--nav-bg) !important;
       color: var(--nav-icon-color) !important;
       height: 55px;
}
       #topbar-first .topbar-nav .nav-segment {
              margin-right: 10px;
       }
       #topbar-first .nav > li > a:hover:not(.selected) {
              background-color: rgba(255,255,255,.1) !important;
              border-radius: 8px !important;
       }
       .fa-lg {
              font-size: 24px !important;
       }
#topbar-first .nav > li > a:hover, 
#topbar-first .nav > li > a:focus, 
#topbar-first .nav > li > button:not(#main-menu):hover, 
#topbar-first .nav > li > button:not(#main-menu):focus, 
#topbar-first button.navbar-toggle:hover,
#topbar-first button.navbar-toggle:focus, 
nav.navbar .nav > li > a:hover, 
nav.navbar .nav > li > a:focus, 
nav.navbar .nav > li > button:hover, 
nav.navbar .nav > li > button:focus {
	background-color: rgba(255,255,255,.1) !important;
	border-radius: 8px !important;
       
}    
	#topbar-first button.navbar-toggle,
	#nav-notifications-menu-btn {
		width: 50px;
		height: 50px;
	}	
	#topbar-first .nav > li > a.selected,
	#nav-notification.dropdown.open {
		border-bottom: 3px solid var(--link-color) !important;
		color: var(--link-color) !important;
	}
#topbar-first .nav > li > a.selected:hover,
#topbar-first .nav > li > a.selected:focus,
#topbar-first .nav > li > #main-menu:hover,
#topbar-first .nav > li > #main-menu:focus,
#nav-notification.dropdown.open #nav-notifications-menu-btn:hover,
#nav-notification.dropdown.open #nav-notifications-menu-btn:focus {
       background-color: transparent !important;
       border-radius: 0 !important;
}
	#nav-notification.dropdown.open #nav-notifications-menu-btn .fa-bell::before {
		content: '\f0f3';
		color: var(--link-color);		
	}
ul.tabs li {
       font-size: 15px !important;
       margin-left: 10px !important;
}
       ul.tabs li a {
              margin-top: 8px;
              color: var(--link-color);
       }
		ul.tabs li:not(.active):hover {
			border-bottom-width: 0px !important;
		}
			ul.tabs li:not(.active):hover > a {
				background-color: rgba(128,128,128,.1) !important;
				background-image: none !important;
				border-radius: 8px !important;
				color: var(--font-color);
			}
    .dropdown-menu {
        padding-bottom: 15px !important;
        background-color: var(--nav-bg) !important;
        border: 1px solid var(--background-color) !important;
    }
		.dropdown-menu li {
			margin: 3px 10px;
			width: 92%  !important;
			border-radius: 8px;
		}
			.dropdown-menu li:hover {
				border-color: transparent  !important;
			}
			.dropdown-menu > li > a:hover,
			.dropdown-menu > li > a:focus {
				background-image: none !important;
				border-radius: 8px ;
			}
			.dropdown-menu > li.active,
			.dropdown-menu > li.active:hover,
			.dropdown-menu > li.active:focus {
				border-radius: 0;
				background-color: transparent;
				border-bottom: 4px solid var(--link-color) !important;
			}
			.dropdown-menu > li.active > a,
			.dropdown-menu > li.active:hover > a,
			.dropdown-menu > li.active:focus > a {
				color: var(--link-color);
				background-color: transparent;
				background-image: none;
			}
    .form-control {
    	background: var(--nav-bg);
    	color: #fff;
    }
    	.form-control[readonly],
    	.form-control[disabled],
    	.fieldset[disabled] .form-control {
    		background-color: #666;
    		color: #fff;
    		opacity: .5;
    	}
    .table-striped > tbody > tr:nth-of-type(2n+1) {
    	background-color: var(--nav-bg);
    }
header #banner {
       left: 0 !important;
       right: auto !important;
       margin-top: 10px;
}
	.navbar-brand #logo-img {
		margin-top: 20px;
	}
	.navbar-brand #logo-img,
	header #banner #logo-img {
		/* SVG Mask is broken in WebKit use Icon Font instead */
		-webkit-mask-image: unset !important;
		mask: none !important;
		mask-size: unset !important;
		mask-composite: unset !important;
		mask-mode: unset !important;
		background-color: transparent !important;
		height: 40px;
		width:  40px;
	}
/* ... */

